# mcp-cpp

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  client_example.cpp  server_example.cpp
include/mcp/: client.hpp  codec.hpp  content.hpp  core.hpp  coro.hpp  elicit.hpp  ids.hpp  json.hpp  mcp.hpp  methods.hpp  protocol.hpp  rpc.hpp  server.hpp  stdio.hpp  types.hpp  version.hpp
include/mcp/cap/: cap.hpp  capability.hpp  client_provider.hpp  local.hpp  process.hpp  registry.hpp  scheduler.hpp  stdio_server.hpp
include/mcp/tools/: host.hpp  meta.hpp  toolset.hpp
include/mcp/tools/util/: arg_reader.hpp  bash_validate.hpp  error.hpp  fs_helpers.hpp  fuzzy_match.hpp  glob.hpp  partial_json.hpp  progress.hpp  sandbox.hpp  subprocess.hpp  tool_args.hpp  utf8.hpp
src/tools/: diagnostics.cpp  diff.cpp  diff.hpp  effects.cpp  fs.cpp  fs_edit.cpp  git.cpp  host_tools.cpp  memory.cpp  provider.cpp  repomap.cpp  search.cpp  shell.cpp  tool_body.cpp  tool_body.hpp  tool_shell.hpp  web.cpp
src/tools/util/: arg_reader.cpp  bash_validate.cpp  fs_helpers.cpp  fuzzy_match.cpp  glob_match.cpp  partial_json.cpp  sandbox.cpp  subprocess.cpp  support.cpp  utf8.cpp
tests/: CMakeLists.txt  arg_reader_test.cpp  bash_validate_test.cpp  cap_test.cpp  codec_test.cpp  fs_tools_test.cpp  fuzzy_match_test.cpp  loopback_test.cpp  protocol_test.cpp  scheduler_test.cpp  search_tools_test.cpp  subprocess_tty_test.cpp  terminal_strip_test.cpp  toolset_test.cpp  web_tools_test.cpp
